; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/executor/extr_execParallel.c_ExecParallelGetQueryDesc.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/executor/extr_execParallel.c_ExecParallelGetQueryDesc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PARALLEL_KEY_QUERY_TEXT = common dso_local global i32 0, align 4
@PARALLEL_KEY_PLANNEDSTMT = common dso_local global i32 0, align 4
@PARALLEL_KEY_PARAMLISTINFO = common dso_local global i32 0, align 4
@InvalidSnapshot = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i32*, i32)* @ExecParallelGetQueryDesc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @ExecParallelGetQueryDesc(i32* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i8*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %12 = load i32*, i32** %4, align 8
  %13 = load i32, i32* @PARALLEL_KEY_QUERY_TEXT, align 4
  %14 = call i8* @shm_toc_lookup(i32* %12, i32 %13, i32 0)
  store i8* %14, i8** %11, align 8
  %15 = load i32*, i32** %4, align 8
  %16 = load i32, i32* @PARALLEL_KEY_PLANNEDSTMT, align 4
  %17 = call i8* @shm_toc_lookup(i32* %15, i32 %16, i32 0)
  store i8* %17, i8** %7, align 8
  %18 = load i8*, i8** %7, align 8
  %19 = call i64 @stringToNode(i8* %18)
  %20 = inttoptr i64 %19 to i32*
  store i32* %20, i32** %9, align 8
  %21 = load i32*, i32** %4, align 8
  %22 = load i32, i32* @PARALLEL_KEY_PARAMLISTINFO, align 4
  %23 = call i8* @shm_toc_lookup(i32* %21, i32 %22, i32 0)
  store i8* %23, i8** %8, align 8
  %24 = call i32 @RestoreParamList(i8** %8)
  store i32 %24, i32* %10, align 4
  %25 = load i32*, i32** %9, align 8
  %26 = load i8*, i8** %11, align 8
  %27 = call i32 (...) @GetActiveSnapshot()
  %28 = load i32, i32* @InvalidSnapshot, align 4
  %29 = load i32*, i32** %5, align 8
  %30 = load i32, i32* %10, align 4
  %31 = load i32, i32* %6, align 4
  %32 = call i32* @CreateQueryDesc(i32* %25, i8* %26, i32 %27, i32 %28, i32* %29, i32 %30, i32* null, i32 %31)
  ret i32* %32
}

declare dso_local i8* @shm_toc_lookup(i32*, i32, i32) #1

declare dso_local i64 @stringToNode(i8*) #1

declare dso_local i32 @RestoreParamList(i8**) #1

declare dso_local i32* @CreateQueryDesc(i32*, i8*, i32, i32, i32*, i32, i32*, i32) #1

declare dso_local i32 @GetActiveSnapshot(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
